tests/sema/veo/85_error_cast_nil_to_non_ptr.veo
func main() {
    // expected-error@+1: cannot assign 'nil' to a non-pointer type 'i64'
    let x: i64 = nil;
}
